overflow fix

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,6 +25,11 @@ li {
 }
 
 /* base styles */
+
+html, body {
+    overflow-x:hidden;
+}
+
 body {
     background: var(--secondary);
     position:relative;
